src/test/resources/plang-strict/parse-error/003_vardecl_missing_type.plang
**#Missing type in variable declarations
Program vardecl_3
    Változók:
        a
    a := 5;
Program_vége
